--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "start": "cd server && nodemon app.js"
   },
   "author": "riya chandra",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.10.0",
     "ai": "^3.0.34",
     "assert": "^2.1.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
@@ -21,9 +24,13 @@
     "google-auth-library": "^9.9.0",
     "googleapi": "^1.0.2",
     "googleapis": "^135.0.0",
+    "jwt-decode": "^4.0.0",
+    "manager": "^1.0.9",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
+    "node": "^20.13.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "openai": "^4.41.1",
     "passport": "^0.7.0",
